# household-financial-planner

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  docker-compose.yml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_foundation.py  0002_property_ownership.py  0003_event_timeline.py  0004_loans.py  0005_rental_expenses.py  0006_income_tax_cashflow.py  0007_retirement_accounts.py  0008_purchase_planner.py  0009_scenarios.py  0010_architecture_alignment.py
api/app/: __init__.py  auth.py  config.py  dependencies.py  event_schemas.py  events.py  income.py  income_schemas.py  loan_calculations.py  loan_schemas.py  loans.py  logging.py  main.py  models.py  properties.py  purchase_calculations.py  purchase_schemas.py  purchases.py  rental.py  rental_calculations.py  rental_schemas.py  retirement.py  retirement_calculations.py  retirement_schemas.py  scenario_calculations.py  scenario_schemas.py  scenario_templates.py  scenarios.py  schemas.py  timeline.py
api/app/core/: auth.py  config.py  database.py  dependencies.py  logging.py
api/app/events/: __init__.py  router.py  schemas.py  (+1 more)
api/scripts/: benchmark_purchase.py  benchmark_retirement.py  check.sh
api/tests/: conftest.py  test_architecture_alignment.py  test_auth.py  test_config.py  test_health.py  test_households.py  test_income_tax.py  test_loans.py  test_properties.py  test_purchase_providers.py  test_purchases.py  test_rental.py  test_retirement.py  test_retirement_providers.py  test_scenarios.py  test_tax_registry.py  test_timeline.py
(+110 files in other folders)
