[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "household-financial-planner-api"
version = "0.10.0"
description = "API and calculation service for Household Financial Planner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3",
  "PyJWT[crypto]>=2.9,<3",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.11,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
